--- a/howwework/_posts/2015-1-1-scrum.md
+++ b/howwework/_posts/2015-1-1-scrum.md
@@ -2,5 +2,16 @@
 layout: post
 title: Agility 
 ---
-# Scrum
+# Magical Scrum
+{% highlight javascript %}
+    scrum = function control_changes(){
+        while (true){
+            getChange(cusomter.requirements)
+                .then(we.adapt);
+        };
+    }
+{% endhighlight %}
+
 ![scrum](/images/scrum.jpg)
+
+## You change, we evolve. Scrum helps us adapt
